-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
4.8.4, 5.0.0
-
Ubuntu 10.04 LTS, VxWorks 6.9.2
-
05b4000e01ff5785739617c3069fbe0b0d36a606
Checking QString home.isNull() is never true if HOME environment variable is not set, it's empty (""). Should use isEmpty() instead.
QString QFileSystemEngine::homePath()
{
QString home = QFile::decodeName(qgetenv("HOME"));
if (home.isNull())
home = rootPath();
return QDir::cleanPath(home);
}
| For Gerrit Dashboard: QTBUG-28912 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 43806,2 | Fixed checking HOME variable return value using isEmpty() | dev | qt/qtbase | Status: ABANDONED | -1 | 0 |
| 44845,4 | Fixed checking HOME variable return value using isEmpty() | stable | qt/qtbase | Status: MERGED | +2 | 0 |