Fixed checking HOME variable return value using isEmpty()

Return value of the QFile::decodeName(qgetenv("HOME")); is never null
if HOME environment variable is not set. So need to check the return
value using isEmpty() instead.

Task-number: QTBUG-28912
Change-Id: Ic57b1978d63e99b056cde35ca8cb9d2a07ff8ce8
Reviewed-by: Oswald Buddenhagen <oswald.buddenhagen@digia.com>
Reviewed-by: Samuel Rødal <samuel.rodal@digia.com>

cregit: 05b4000e01ff5785739617c3069fbe0b0d36a606 https://github.com/qt/qtbase/commit/05b4000e01ff5785739617c3069fbe0b0d36a606